# CarbonFluxBench

./: .gitignore  README.md  pyproject.toml  run_tests.sh
baselines/: Results.ipynb  cv_5fold_IGBP_split.json  cv_5fold_Koppen_split.json  evaluate_ensemble.py  run_ensemble.sh  run_eval.sh  train_gridsearch.py  train_single.py  utils.py
baselines/eval_results/: ctgru_IGBP_full_ensemble.csv  ctgru_IGBP_minimal_ensemble.csv  ctgru_IGBP_standard_ensemble.csv  ctgru_Koppen_full_ensemble.csv  ctgru_Koppen_minimal_ensemble.csv  ctgru_Koppen_standard_ensemble.csv  ctlstm_IGBP_full_ensemble.csv  ctlstm_IGBP_minimal_ensemble.csv  ctlstm_IGBP_standard_ensemble.csv  ctlstm_Koppen_full_ensemble.csv  ctlstm_Koppen_minimal_ensemble.csv  ctlstm_Koppen_standard_ensemble.csv  gru_IGBP_full_ensemble.csv  gru_IGBP_minimal_ensemble.csv  gru_IGBP_standard_ensemble.csv  gru_Koppen_full_ensemble.csv  gru_Koppen_minimal_ensemble.csv  gru_Koppen_standard_ensemble.csv  lgbm_IGBP_minimal.csv  lgbm_Koppen_minimal.csv  lstm_IGBP_full_ensemble.csv  lstm_IGBP_minimal_ensemble.csv  lstm_IGBP_standard_ensemble.csv  lstm_Koppen_full_ensemble.csv  lstm_Koppen_minimal_ensemble.csv  lstm_Koppen_standard_ensemble.csv  micas_IGBP.csv  micas_Koppen.csv  patch_transformer_IGBP_full_ensemble.csv  patch_transformer_IGBP_minimal_ensemble.csv  patch_transformer_IGBP_standard_ensemble.csv  (+17 more)
carbonfluxbench/: __init__.py
examples/: EDA.ipynb  workflow_example.ipynb
scripts/: download_data.sh  extractMiCASA.py  stackFluxes.py
tests/: test_metrics.py  test_models.py  test_processing.py
(+8 files in other folders)
