[project]
name = "carbonfluxbench"
version = "1.0.0"
description = "CarbonFluxBench: A Global Benchmark for Upscaling of Carbon Fluxes Using Zero-Shot Learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["Transfer learning", "zero-shot learning", "domain generalization", "benchmark", "upscaling", "carbon fluxes"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "xgboost>=1.7",
    "cartopy>=0.21",
    "pyarrow>=10.0",
    "fastparquet>=0.8",
]

[project.optional-dependencies]
baselines = ["pyyaml>=6.0", "tqdm>=4.65"]
test = ["pytest>=7.0"]
dev = ["carbonfluxbench[baselines,test]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
